--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,17 @@
     -->
     <title>Brendon Van - Software Engineer, Front-end, and App Developer </title>
   </head>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2V0VLMLNN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-K2V0VLMLNN');
+  </script>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
